@@ -1,4 +1,5 @@
 include *.txt
+include *.rst
 
 recursive-include src *
 
